<resources>
    <string name="app_name">tasks</string>
    <string name="textView_one">this TextView one</string>
    <string name="textView_two">this TextView two</string>
    <string name="swap">swap</string>
    <string name="task1">task1</string>
    <string name="task2">task2</string>
    <string name="picture_url">https://static.mk.ru/upload/entities/2017/12/28/articles/detailPicture/28/35/c2/84/c21033e59c396cc576fc5f48343ebccc.jpg</string>
    <string name="task3">task3</string>
    <string name="load">load</string>
    <string name="owl">Owl</string>
    <string name="diagram">Diagram</string>
    <string name="task4">task4</string>
    <string name="task5">task5</string>
    <string name="task7">task7</string>
    <string name="title_activity_main_activitya">MainActivitya</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Имя:</string>
    <string name="surname">Фамилия:</string>
    <string name="age">Возраст:</string>
    <string name="photo">Фото:</string>
    <string name="svave">Svave</string>
</resources>
