<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/task1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskOne"
        android:text="@string/task1" />

    <Button
        android:id="@+id/task2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskTwo"
        android:text="@string/task2" />

    <Button
        android:id="@+id/task3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskThree"
        android:text="@string/task3" />

    <Button
        android:id="@+id/task4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskFour"
        android:text="@string/task4" />
    <Button
        android:id="@+id/task5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskFive"
        android:text="@string/task5" />

    <Button
        android:id="@+id/task7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="taskSeven"
        android:text="@string/task7" />

</LinearLayout>