<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/textView_one"
        android:background="@color/textViewOneColor"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/textView_two"
        android:background="@color/textViewTwoColor"
        android:textSize="26sp" />

    <Button
        android:id="@+id/execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/backgroundButton"
        android:onClick="buttonClick"
        android:text="@string/swap"
        android:textSize="39sp" />

</LinearLayout>
